[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/board/zone.gd" id="1_zone"]

[node name="Zone" type="PanelContainer"]
custom_minimum_size = Vector2(180, 250)
script = ExtResource("1_zone")

[node name="ZoneBackground" type="TextureRect" parent="."]
layout_mode = 2
mouse_filter = 2
expand_mode = 3
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 6

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Zone Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DeckLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "[Deck Type]"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TokenContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1
